# F1DB

./: README.md  manage.py  pyproject.toml
F1DB/: asgi.py  settings.py  urls.py  wsgi.py
mechanical/: admin.py  apps.py  serializers.py  urls.py  views.py
mechanical/migrations/: 0001_initial.py  0002_remove_tyrecompound_unique tyre producer-compound.py  0003_tyrecompound_unique tyre producer-compound.py  0004_engine_teamcar_drivercar.py  0005_delete_drivercar.py
mechanical/models/: __init__.py  car.py  car_parts.py  tyres.py
personnel/: admin.py  serializers.py  urls.py  views.py
personnel/migrations/: 0001_initial.py  0002_alter_country_country_code_and_more.py  0003_team_tean_principal_teammember_team_team_members.py  0004_remove_teammember_team_alter_team_team_members.py  0005_alter_country_options_alter_person_options_and_more.py  0006_alter_teammember_team.py  0007_teammember_unique employee.py  0008_remove_teammember_unique employee_and_more.py  0009_alter_teammember_team.py  0010_alter_teammember_person.py  0011_remove_person_driver_abbreviation_and_more.py  0012_alter_team_team_principal.py
personnel/models/: __init__.py  country.py  person.py  team.py
