[tool.poetry]
name = "f1db"
version = "0.0.1"
description = "A personal project to learn Django, themed around F1."
authors = ["Luke Roberts <robertsluke3@gmail.com>"]
license = "Proprietry"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
